# Kael

./: .gitignore  Cargo.toml  README.md
src/: chat.rs  config.rs  gui.rs  main.rs
src/ai/: database.rs  downloader.rs  llama.rs  mod.rs  ollama.rs  orchestrator.rs  search.rs  terminal.rs  terminal_gui.rs  training.rs  vault.rs
